# cloud-apitest

./: .travis.yml  README.md  pyproject.toml
game_apitest/: __init__.py
game_apitest/tests/: test_core.py
