[tool.poetry]
name = "cloud-apitest"
version = "0.1.0"
description = ""
authors = ["weizhengxia <wzx426@163.com>"]

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^5.4.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
